--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   image_gallery_saver: '^1.6.6'
   permission_handler: ^4.4.0
-  flutter_downloader: ^1.5.2
   image: ^2.1.19
+  flutter_plugin_android_lifecycle: ^1.0.11
 
 dev_dependencies:
   flutter_test:
